--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-stripe-checkout": "^2.6.3",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-form": "^8.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
